--- a/signature.htm
+++ b/signature.htm
@@ -7,11 +7,11 @@
 Rafael Nadal
 </p>
 <p style="font-size: 10pt;">
-+33 (0) 6 12 34 56 78</br>
-<a style="color: #005180;" href="mailto:raf@fgwrs.mc">raf@fgwrs.mc</a></br>
-<a style="color: #005180;" target="_blank" href="http://www.fgwrs.mc/">www.fgwrs.mc</a></br>
++33 (0) 6 12 34 56 78<br/>
+<a style="color: #005180;" href="mailto:raf@fgwrs.mc">raf@fgwrs.mc</a><br/>
+<a style="color: #005180;" target="_blank" href="http://www.fgwrs.mc/">www.fgwrs.mc</a>
 </p>
 <p style="font-size: 10pt; font-weight: bold;">
-wash water › save water
+wash water 	&rsaquo; save water
 </p>
 </div>
